--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,14 @@
 	<groupId>com.gooddata.agent</groupId>
 	<artifactId>gdc-agent</artifactId>
 	<packaging>jar</packaging>
-	<version>0.9.2</version>
+	<version>0.10.0</version>
 	<name>GoodData Agent</name>
 	<url>http://maven.apache.org</url>
+	<properties>
+		<targetJdk>1.8</targetJdk>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>net.sf.jopt-simple</groupId>
