--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.gooddata.agent</groupId>
 	<artifactId>gdc-agent</artifactId>
 	<packaging>jar</packaging>
-	<version>0.11.0-snapshot</version>
+	<version>0.11.0</version>
 	<name>GoodData Agent</name>
 	<url>http://maven.apache.org</url>
 	<properties>
